syntax = "proto3";

// package go.micro.srv.order;
option go_package = ".;order";

service Order {
  // 创建出行订单
  rpc CreateOrder(ReqCreateOrder) returns (RespCreateOrder) {}
  // 接受订单 / 抢单
  rpc AcceptOrder(ReqAcceptOrder) returns (RespAcceptOrder) {}
}

message order {
  int64 id = 1;
  string orderId = 2;
  string srcGeo = 3;
  string destGeo = 4;
  int64 acceptAt = 5;
  int64 createAt = 6;
  int64 cancelAt = 7;
  int64 finishAt = 8;
  int32 cancelRole = 9;
  double cost = 10;
  string passengerId = 11;
  string driverId = 12;
  int32 status = 13;
}

message ReqCreateOrder {
  order order = 1;
  string sign = 2;
}

message RespCreateOrder {
  int32 code = 1;
  order order = 2;
  string message = 3;
}

message ReqAcceptOrder {
  order order = 1;
  string sign = 2;
}

message RespAcceptOrder {
  int32 code = 1;
  order order = 2;
  string message = 3;
}